--- a/frontend/src/features/greet/Greet.module.css
+++ b/frontend/src/features/greet/Greet.module.css
@@ -8,11 +8,12 @@
   button {
     background: none;
     border: 5px solid white;
-    padding: 1rem 3rem;
-    font-size: 2rem;
+    padding: 1rem 4rem;
+    font-size: 1.5rem;
     color: white;
     font-weight: bold;
     cursor: pointer;
+    font-family: var(--font-family);
 
     &:hover {
       border-color: black;
